# swacn

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  azure_deployment.md  deployment.md  repomix-output.xml  swacn.code-workspace
.github/workflows/: deploy.yml  release-cli.yml
cli/: CMakeLists.txt  swacn.json
cli/src/: main.cpp
infrastructure/: Caddyfile  provision-vm.sh  swacn.service
player/: package-lock.json  package.json  vite.config.ts
player/src/: App.tsx
player/src/components/: SwacnPlayer.tsx
player/src/core/: CastParser.ts  WebVMBridge.ts
scripts/: install.ps1  install.sh
server/: CMakeLists.txt  config.json  migration.sql  schema.sql  scratch_check.js  scratch_fetch.js
server/src/: main.cpp
server/src/controllers/: AuthController.cpp  AuthController.hpp  CastController.cpp  CastController.hpp  LabHtmlController.cpp  LabHtmlController.hpp  OembedController.cpp  OembedController.hpp  PaymentController.cpp  PaymentController.hpp  ProxyController.cpp  ProxyController.hpp
src/: main.cpp  watcher.cpp  watcher.hpp
web/: .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
web/public/: llms.txt  robots.txt  sitemap.xml
web/src/: App.tsx  asciinema.d.ts  index.css
web/src/components/: Layout.tsx  LoginModal.tsx  ProjectCreatorModal.tsx
web/src/lib/: CheerpXVM.ts  TarBuilder.ts  TarReader.ts  V86VM.ts  VMWorker.ts  api.ts  relay-worker.ts  v86-worker.ts
web/src/pages/: AuthCallback.tsx  Blueprint.tsx  CLI.tsx  Dashboard.tsx  Guide.tsx  Home.tsx  Lab.tsx  Privacy.tsx  Terms.tsx
web/src/workers/: V86Worker.js
